@@ -33,6 +33,13 @@
  */
 interface ZMProductAssociationHandler {
 
+	/**
+	 * Get the type this handler handles.
+	 * 
+	 * @return string The type identifier.
+	 */
+	public function getType();
+	
     /**
      * Get product associations for the given product, type and parameter.
      *
